--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,2 +1,2 @@
 <img src="/img/{{ include.file }}" alt="{{ include.description }}">
-<span class="caption">{{ include.description }}</span>
+<span class="caption" style="font-size: .5em; float: right;">{{ include.description }}</span>
